--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"test": "mocha --reporter spec",
 		"cover": "node node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
-	  },
+	},
 	"dependencies": {
 		"jsdom": "^15.1.1"
 	},
@@ -14,6 +14,14 @@
 		"type": "git",
 		"url": "https://github.com/colgatto/Multiparser.git"
 	},
+	"homepage": "https://github.com/colgatto/Multiparser",
+	"keywords": [
+		"parser",
+		"regex",
+		"dom-parser",
+		"text-parser",
+		"json"
+	],
 	"author": "Colgatto",
 	"license": "RWTFPL",
 	"devDependencies": {
