--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"cover": "node node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
 	},
 	"dependencies": {
-		"jsdom": "^15.1.1"
+		"fast-html-parser": "^1.0.1"
 	},
 	"repository": {
 		"type": "git",
