--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"devDependencies": {
 		"chai": "^4.2.0",
 		"coveralls": "^3.0.6",
+		"handlebars": "^4.4.3",
 		"istanbul": "^0.4.5",
 		"mocha": "^6.2.1"
 	}
