better docgen, removed handlebars

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
 	},
 	"dependencies": {
 		"fast-html-parser": "^1.0.1",
-		"request": "^2.88.0",
-		"snyk": "^1.290.1"
+		"request": "^2.88.0"
 	},
 	"repository": {
 		"type": "git",
@@ -23,14 +22,15 @@
 		"regex",
 		"dom-parser",
 		"text-parser",
-		"json"
+		"json",
+		"csv",
+		"crypto"
 	],
 	"author": "Colgatto",
 	"license": "RWTFPL",
 	"devDependencies": {
 		"chai": "^4.2.0",
 		"coveralls": "^3.0.9",
-		"handlebars": "^4.7.2",
 		"istanbul": "^0.4.5",
 		"mocha": "^7.0.1"
 	}
